samples/_failures_safe/1761002642_086dec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_926e5d6a.c: In function ‘main’:
./samples/SAFE/__tmp_926e5d6a.c:162:16: error: ‘EX’ undeclared (first use in this function)
  162 |         return EX
      |                ^~
./samples/SAFE/__tmp_926e5d6a.c:162:16: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_926e5d6a.c:162:18: error: expected ‘;’ at end of input
  162 |         return EX
      |                  ^
      |                  ;
./samples/SAFE/__tmp_926e5d6a.c:162:9: error: expected declaration or statement at end of input
  162 |         return EX
      |         ^~~~~~
./samples/SAFE/__tmp_926e5d6a.c:162:9: error: expected declaration or statement at end of input
